Refs #140518 - Fix header columns spacing on small screens.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -1262,6 +1262,12 @@ div#page-document {
   }
 }
 
+@media screen and (max-width: 770px) {
+  div.ui.container.stackable.two.column.grid.header-columns {
+    margin-left: 0px !important;
+  }
+}
+
 @media screen and (min-width: 1000px) and (max-width: 1300px) {
   div.content-section-tabs.menu {
     a.item {
